# Gra-ukladanie_slow

./: CMakeLists.txt  CMakeLists.txt~  Gra-ukladanie_slow.pro  Makefile  README.md  main.cpp  server  server.cpp
Client/: CMakeLists.txt  CMakeLists.txt~  CMakeLists2.txt  Client.pro  chatclient.cpp  chatclient.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  client.cpp  client.h  main.cpp  window.cpp  window.h  window.ui
Gra_slowa/: Gra_slowa.pro
Gra_slowa/Client/: Client.pro  chatclient.cpp  chatclient.h  chatwindow.cpp  chatwindow.h  chatwindow.ui
Gra_slowa/Server/: Server.pro  chatserver.cpp  chatserver.h  main.cpp  main.h  serverwindow.cpp
Gra_slowa/build-Client-Desktop-Debug/: Client  Makefile  Makefile.Debug  Makefile.Release  moc_chatclient.cpp  moc_chatwindow.cpp  ui_chatwindow.h
Gra_slowa/build-Client-Desktop-Debug/debug/: moc_chatclient.cpp  moc_chatwindow.cpp
Server/: CMakeLists.txt  server  server.cpp
build-Client-Desktop-Debug/: Client  Makefile  Makefile.Debug  Makefile.Release  moc_chatclient.cpp  moc_chatwindow.cpp  moc_client.cpp  moc_window.cpp  ui_chatwindow.h  ui_window.h
build-Client-Desktop-Debug/debug/: moc_chatclient.cpp  moc_chatwindow.cpp
build-Gra_slowa-Desktop-Debug/: Makefile
build-Gra_slowa-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: Makefile
build-Gra_slowa-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Client/: Makefile  Makefile.Debug  Makefile.Release  ui_chatwindow.h
build-Gra_slowa-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Server/: Makefile  Makefile.Debug  Makefile.Release  ui_serverwindow.h
(+5 files in other folders)
